UniversityCRM/force-app/main/default/objects/Enrollment_Change__e/Enrollment_Change__e.object-meta.xml
<CustomObject>
    <description>A Platform Event on Enrollment sObject when the status change happens during Update or Create</description>
    <label>Enrollment Change</label>
    <pluralLabel>Enrollment Changes</pluralLabel>
</CustomObject>