UniversityCRM/force-app/main/default/objects/Enrollment_Change__e/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>