UniversityCRM/force-app/main/default/objects/Enrollment_Change__e/fields/Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Id__c</fullName>
    <label>Enrollment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>