UniversityCRM/force-app/main/default/objects/Enrollment_Change__e/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <label>New Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>