UniversityCRM/force-app/main/default/objects/Enrollment_Change__e/fields/Student_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Id__c</fullName>
    <label>Student Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>