UniversityCRM/force-app/main/default/objects/Enrollment_Change__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>